@@ -147,13 +147,25 @@ public:
   /// Converts from ACE_Time_Value format into milli-seconds format.
   /**
    * @return Sum of second field (in milliseconds) and microsecond field
-   *         (in milliseconds).
+   *         (in milliseconds).  Note that this method can overflow if
+   *         the second and microsecond field values are large, so use
+   *         the msec (unsigned long long &ms) method instead.
    *
    * @note The semantics of this method differs from the sec() and
    *       usec() methods.  There is no analogous "millisecond"
    *       component in an ACE_Time_Value.
    */
   unsigned long msec (void) const;
+
+  /**
+   * @return Sum of second field (in milliseconds) and microsecond field
+   *         (in milliseconds) and return them via the @param ms parameter.
+   *
+   * @note The semantics of this method differs from the sec() and
+   *       usec() methods.  There is no analogous "millisecond"
+   *       component in an ACE_Time_Value.
+   */
+  void msec (unsigned long long &ms) const;
 
   /// Converts from milli-seconds format into ACE_Time_Value format.
   /**
