@@ -1,3 +1,9 @@
+Wed Sep  8 10:17:46 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>
+
+	* ace/Time_Value.{h,inl} Added a new msec() method that uses
+	  unsigned long long to compute the value to prevent overflow.
+  	  Thanks to Boris Kaminer <boris_kaminer@mail.ru> for reporting this.
+
 Wed Sep  8 08:15:00 UTC 2004  Simon Massey  <simon.massey@prismtechnologies.com>
 
         * tests/FIFO_Test.cpp
